--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,10 @@
-.input-head{
-    font-family:'Times New Roman', Times, serif;
+.txt {
+    font-size: large;
+    font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
 }
-.nav-cust{
+
+.nav-cust {
     background-color: rgba(29, 210, 189, 1);
     font-size: 2.5rem;
     color: white;
@@ -10,24 +12,28 @@
     margin: 0;
 }
 
-.input{
-    background-color:rgba(245, 245, 245, 1);
+.input {
+    background-color: rgba(245, 245, 245, 1);
     box-shadow: 1px 1px 4px;
     height: 3rem;
     border: none;
-    outline:none;
+    outline: none;
 }
-.input-small{
+
+.input-small {
     width: 4rem;
 }
-.mr-7{
+
+.mr-7 {
     margin-right: 7rem;
 }
-.ml-7{
+
+.ml-7 {
     margin-left: 7rem;
 }
 
-.btn-aqua{
+
+.btn-aqua {
     margin-top: 1rem;
     background-color: rgba(29, 210, 189, 1);
     border: 0;
@@ -37,14 +43,21 @@
     font-family: 'Times New Roman', Times, serif;
     font-size: 1.75rem;
 }
-.progress{
 
-   margin-left: auto;
-   margin-right: auto;
-    width: 40rem;
-    
-    
+.progress {
+
+    margin-left: auto;
+    margin-right: auto;
+    width: 300px;
+
+
+
+
 }
-.left{
-    
+
+@media only screen and (max-width: 600px) {
+    .nav-cust {
+        text-align: center;
+
+    }
 }
