--- a/style/style.css
+++ b/style/style.css
@@ -42,6 +42,7 @@
     color: white;
     font-family: 'Times New Roman', Times, serif;
     font-size: 1.75rem;
+    box-shadow: 1px 1px 4px rgb(0, 0, 0);
 }
 
 .progress {
